--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/webhook.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/api/webhook", "dest": "api/webhook.py" }
-  ]
+  "builds": [{ "src": "api/webhook.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/api/webhook", "dest": "api/webhook.py" }]
 }
