--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "version": 2,
-  "builds": [{ "src": "api/webhook.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/api/webhook", "dest": "api/webhook.py" }]
+    "version": 2,
+    "builds": [
+        {
+            "src": "main.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
+        {
+            "src": "(.*)",
+            "dest": "main.py"
+        }
+    ]
 }
